bugfix for input range on IE

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ input[type='range'] {
 input[type=range]{
 	-webkit-appearance: none;
 	/* fix for FF unable to apply focus style bug  */
-	border: 1px solid white; 
+	border: 1px solid white;
 }
 input[type=range]::-webkit-slider-runnable-track {
 	height: 10px;
@@ -60,6 +60,14 @@ input[type=range]::-webkit-slider-thumb {
 	margin-top: -11px;
 	background-image: linear-gradient(rgba(255,255,255,0),rgba(0,0,0,0.1));
 	box-shadow: 0 0 8px rgba(0,0,0,0.3);
+}
+input[type=range]::-ms-thumb {
+    border: none;
+    height: 10px;
+	width: 10px;
+    border-radius: 50%;
+	background: #ffffff;
+	margin-top: 1px;
 }
 input[type=range]:focus {
 	outline: none;
